# lol-static-downloader

./: Cargo.toml
src/: champion.rs  item.rs  main.rs  profile.rs  rune.rs
static/: champions.json  index.html  items.json  profiles.json  runes.json
